Revision history for Web::Components::Role::Email

0.2.1     2016-04-01 15:14:05
          - Better error reporting
          - Added badge markup
          - Fewer test dependencies in boilerplate
          - Passes tests

0.1.1     2015-09-02 20:22:21
          - Added project files to master branch
