@@ -2,7 +2,7 @@ package Web::Components::Role::Email;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Email::MIME;
 use Encode                     qw( encode );
@@ -82,13 +82,19 @@ my $_create_email = sub {
    my $email    = { attributes => { %{ $attr }, %{ $args->{attributes} // {}}}};
    my $from     = $args->{from} or throw Unspecified, [ 'from' ];
    my $to       = $args->{to  } or throw Unspecified, [ 'to'   ];
-   my $subject  = encode( 'MIME-Header', $args->{subject} // 'No subject' );
    my $encoding = $email->{attributes}->{charset};
+   my $subject  = $args->{subject} // 'No subject';
+
+   try   { $subject = encode( 'MIME-Header', $subject, TRUE ) }
+   catch { throw 'Cannot encode subject as MIME-header' };
 
    $email->{header} = [ From => $from, To => $to, Subject => $subject ];
    $email->{body  } = $_get_email_body->( $self, $args );
 
-   $encoding and $email->{body} = encode( $encoding, $email->{body} );
+   try   {
+      $encoding and $email->{body} = encode( $encoding, $email->{body}, TRUE );
+   }
+   catch { throw 'Cannot encode body as [_1]', [ $encoding ] };
 
    exists $args->{attachments} and $_add_attachments->( $args, $email );
 
