@@ -1,5 +1,7 @@
 Revision history for Web::Components::Role::Email
 
+          - More defensive encode calls
+
 0.2.1     2016-04-01 15:14:05
           - Better error reporting
           - Added badge markup
